# online_amt

./: Dockerfile  file_stream.py  mic_stream.py  pyproject.toml  requirements.txt  run_on_web.py  transcribe.py
examples/: get_devices.py  modify_rate.py
templates/: test.html
tests/: test_read.py
